CP -Fixing alignment of footer

--- a/my-app/src/Components/Footer.module.css
+++ b/my-app/src/Components/Footer.module.css
@@ -2,6 +2,7 @@
 body {
   overflow: hidden;
   z-index:7;
+
 }
 
 .Footer {
@@ -14,9 +15,8 @@ body {
 #your {
   color: white;
   display: inline-block;
-  margin-right: 1%;
-  margin-left: 27%;
-  left: 98vh;
+  position: relative;
+  left: 160vh;
   }
   
   #GLOWING {
@@ -31,13 +31,13 @@ body {
         0 0 102px #D4D78A,
         0 0 151px  #D4D78A;
     display: inline-block;
-    left: 110vh;
+    left: 161vh;
+    position: relative;
   }
 
 .logo {
  position: absolute;
- margin-left: 35%;
- margin-top: 40%;
+
  background-color: transparent;
 
 }
